# celo-faucet

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
src/: config.rs  faucet.rs  http.rs  jsonrpc.rs  logging.rs  main.rs  store.rs  telegram.rs  tx.rs
web/: index.html  main.ts  package-lock.json  package.json
