[package]
name = "celo-faucet"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
salvo = { version = "0.73", features = ["serve-static"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
alloy-primitives = "0.8"
alloy-rlp = "0.3"
alloy-eips = "0.5"
alloy-signer-local = "0.5"
alloy-network = "0.5"
alloy-consensus = "0.5"
sled = "0.34"
k256 = "0.13"
teloxide = { version = "0.13", features = ["macros"] }
dotenvy = "0.15"
hex = "0.4"
async-trait = "0.1"
